# sciurus17_docker

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  entry_exec.sh
assets/: setup.sh
sciurus17_common/: README.md
sciurus17_common/s17_bringup/: package.xml  setup.cfg  setup.py
sciurus17_common/s17_bringup/launch/: bringup.launch.py  moveit_control.launch.py
sciurus17_common/s17_bringup/rviz/: s17_bringup.rviz
sciurus17_common/s17_common/: CMakeLists.txt  package.xml
sciurus17_common/s17_common/config/: moveit_planning_pipeline.yaml
sciurus17_common/s17_common/include/: pose_presets.hpp
sciurus17_common/s17_common/s17_common/: README.md  init_pose.py  object_grasp.py  robot_control.oy  robot_control.py
sciurus17_common/s17_common/scripts/: gaze_table.py  grasp_object.py  init_pose.py  sample_move.py  set_pose.py
sciurus17_common/s17_common/src/: init_pose.cpp.orig  moveit2_control.cpp.orig  moveit2_l_control.cpp  moveit2_r_control.cpp  pose_presets.cpp  pose_srvs.cpp  set_pose.cpp
sciurus17_common/s17_msgs/: CMakeLists.txt  package.xml
sciurus17_common/s17_msgs/srv/: SetPose.srv  SetPosition.srv
sciurus17_common/s17_tasks/: package.xml  setup.cfg  setup.py
sciurus17_common/s17_tasks/s17_tasks/: tap_grasp.py
sciurus17_common/s17_vision/: CMakeLists.txt  package.xml
sciurus17_common/s17_vision/launch/: gaze_table.launch.py
sciurus17_common/s17_vision/s17_vision/: serching_oject.py
sciurus17_common/s17_vision/scripts/: test_ceonter_detect.py
sciurus17_common/s17_vision/src/: obstacle_detection.cpp  space_finder.cpp
turtlebot3_common/tb3_common/: package.xml  setup.cfg  setup.py
turtlebot3_common/tb3_common/launch/: .turtlebot3_sim_minimum_bringup.launch.py.swp  turtlebot3_sim_minimum_bringup.launch.py
turtlebot3_common/tb3_common/rviz/: minimum_burger.rviz  minimum_waffle.rviz
turtlebot3_common/tb3_common/tb3_common/: teleop_cam.py  teleop_joy.py
turtlebot3_common/tb3_navigation/: package.xml  setup.py
turtlebot3_common/tb3_navigation/launch/: cartographer_launch.py  cartographer_localization.launch.py  create_2d_map_cartographer.launch.py  nav2_bringup.launch.py  navigation_bringup_launch.py
turtlebot3_common/tb3_navigation/map/: ..pgm  ..yaml  .pgm  .yaml  tb3w_map.pgm  tb3w_map.yaml  turtlebot3_house_map.pgm  turtlebot3_house_map.yaml  turtlebot3_world_map.pgm  turtlebot3_world_map.yaml
turtlebot3_common/tb3_navigation/rviz/: tb3_navigation.rviz
turtlebot3_common/tb3_navigation/sample_scripts/: sample_navigation.py
